assets/scss/_styles_project.scss
/* ... */
/* Miscellaneous custom bits */

/* Update link colours for MAtrix style */
a, a:hover {
  color: $secondary;
}

/* This is needed to stop the bottom of the Matrix icon from getting snipped off. */
.td-navbar .navbar-brand svg {
  height: 32px;
}

/* Give code samples and pre elements full-width */
.td-content > .highlight, .td-content > pre {
  max-width: 100%;
}

/* The default CSS applies a style for blockquotes but only to immediate children
of .td-content. This applies the same style to any blockquotes that descend from
.td-content. */
.td-content blockquote {
  padding: 0 0 0 1rem;
  margin-bottom: $spacer;
  color: $gray-600;
  border-left: 6px solid $secondary;
}

/*
Make padding symmetrical (this selector is used in the default styles to apply padding-left: 3rem)
*/
.pl-md-5, .px-md-5 {
  @include media-breakpoint-up(md) {
    padding-right: 3rem;
  }
}

/* Adjust the width of math to match normal paragraphs */
@include media-breakpoint-up(lg) {
  .katex-display {
    max-width: 80%;
  }
}

/* Adjust default styles for info banner */
.pageinfo-primary {
  @include media-breakpoint-up(lg) {
    max-width: 80%;
  }
  margin-top: 0;
  margin-right: 0;
  margin-left: 0;
  border: 0;
  border-left: solid 5px $secondary;
  background-color: $gray-100;
}

.pageinfo-unstable {
  background-image: url('../icons/unstable.png');
  background-position: left 1rem center;
  background-repeat: no-repeat;
  padding-left: 100px;
}

/* Adjust the styling of definition lists. */

/* Add a little spacing between the term and its definition. */
dt {
   margin-bottom: 0.15rem;
}

/* _reboot.scss deliberately sets margin-left to 0. Undo this. */
dd {
  margin-left: 2rem;
}

/* docsy's _code.scss does only styles <code> elements matching
 * .td-content { p code, li > code, table code }.
 * Copy those styles here to apply to code <elements> in definition terms too. */

.td-content {
  dt code {
    color: inherit;
    padding: 0.2em 0.4em;
    margin: 0;
    font-size: 85%;
    word-break: normal;
    background-color: rgba($black, 0.05);
    border-radius: 0.25rem;  // was $border-radius, but that var isn't accessible here.
  }
}

/* Style for breadcrumbs */
.td-breadcrumbs {
  padding: .75rem 1rem;
  background-color: #eee;
  border-radius: .25rem;
  margin-bottom: 1rem;

  .breadcrumb {
    margin: 0;
  }
}

/* Style for the page search widget */
.td-offline-search-results {
  width: 100%;
  max-width: 460px;
}

.td-offline-search-results .spinner-container {
  text-align: center;
}

